tests/ui/proc-macro/quote/does-not-have-iter-separated.stderr
error: proc macro panicked
  --> $DIR/does-not-have-iter-separated.rs:12:5
   |
LL |     quote!($(a b),*);
   |     ^^^^^^^^^^^^^^^^
   |
   = help: message: `$` must be followed by an ident or `$` in `quote!`

error: aborting due to 1 previous error

